--- a/Sign-up.css
+++ b/Sign-up.css
@@ -16,7 +16,7 @@
 }
 
 /* SIGN-UP FORM */
-.login-container {
+.sign-up-container {
     text-align: center;
     width: 550px;
     height: 750px;
@@ -25,12 +25,12 @@
     border-radius: 50px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
-.login-container h2 {
+.sign-up-container h2 {
     margin-bottom: 20px;
     text-align: center;
 }
-.login-container input[type="text"],
-.login-container input[type="password"] {
+.sign-up-container input[type="text"],
+.sign-up-container input[type="password"] {
     background-color: #FFF8CF;
     width: calc(80% - 40px);
     height: 20%;
@@ -40,7 +40,7 @@
     border-radius: 5px;
     outline: none;
 }
-.login-container input[type="submit"] {
+.sign-up-container input[type="submit"] {
     font-size: 20px;
     width: 30%;
     padding: 10px;
@@ -52,14 +52,28 @@
     color: #ffffff;
     cursor: pointer;
 }
-.login-container input[type="submit"]:hover {
+.sign-up-container input[type="submit"]:hover {
     background-color: #216c3d;
 }
-.login-container p {
+.sign-up-container p {
     margin-top: 15px;
     text-align: center;
 }
 
 label{
-    margin-left: -40px;
+    font-size: 20px;
+}
+
+#back-arrow{
+    color: black;
+    font-size: 50px;
+    margin-top: 20px;
+    margin-left: -400px;
+}
+
+#back-arrow:hover { 
+    font-size: 55px;
+    margin-top: 15px;
+    margin-left: -400px;
+    color: rgb(90, 90, 90);
 }
