--- a/userHomePage.css
+++ b/userHomePage.css
@@ -117,10 +117,112 @@
 
 /* About Section */
 #About{
-    height: 1096px;
-    background-image: url('ImageSrc/About-BGimage.png');
+  font-family: 'PP Neue Montreal', sans-serif;
+  height: 1080px;
+  background-image: url('ImageSrc/About-BGimage.png');
+  background-size:cover; 
+  background-position: center; 
 }
 
 .responsive-img{
-    border-radius: 20px;
+  border-radius: 30px;
+  margin-top: 10px;
+}
+
+.meet{
+  animation: fadeInForMeet 1s ease-in; 
+  padding: 30px;
+  background-color: #01160a;
+  border-radius: 30px 30px 0px 0px ;
+}
+
+#researcherName{
+  color: #033016;
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+#researcherRole{
+  color: #033016;
+  font-size: 23px;
+  font-weight: 600;
+  margin-top: -20px;
+  margin-bottom: -10px;
+}
+
+#WebsiteInfo{
+  color: #ededed;
+  font-size: 20px;
+  text-align: center;
+  animation: fadeIn 2s ease-out; 
+}
+
+#Cont-researchers{
+  background-color: white; 
+  padding:50px; 
+  border-radius: 0px 0px 30px 30px;
+  animation: fadeInForCont-researchers 1s ease-out; 
+  margin-top: -44px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInForMeet {
+  from {
+    opacity: 1;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInForCont-researchers {
+  from {
+    opacity: 1;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#columnResearcher {
+  animation: fadeIn 1s ease-out; 
+}
+
+#columnResearcher:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+#columnResearcher:nth-child(2) {
+  animation-delay: 0.4s; 
+}
+
+#columnResearcher:nth-child(3) {
+  animation-delay: 0.6s; 
+}
+
+#columnResearcher:nth-child(4) {
+  animation-delay: 0.8s;
+}
+
+/* WebCalendar Section */
+#WebCalendar{
+  font-family: 'PP Neue Montreal', sans-serif;
+  height: 1080px;
+  background-image: url('ImageSrc/WebCalendar-BGimage.png');
+  background-size:cover; 
+  background-position: center; 
 }
