--- a/ToDoList.css
+++ b/ToDoList.css
@@ -123,8 +123,8 @@ input {
 .addBtn {
   padding: 10px;
   width: 25%;
-  background: #d9d9d9;
-  color: #555;
+  background: #ffffff;
+  color: #000000;
   float: left;
   text-align: center;
   font-size: 16px;
@@ -135,6 +135,24 @@ input {
 
 .addBtn:hover {
   background-color: #bbb;
+}
+
+button{
+  padding: 10px;
+  width: 10%;
+  background: #001d0b;
+  color: #ffffff;
+  float: right;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 20px;
+  margin-top: 15px;
+}
+
+a button{
+  margin-left: -20px;
 }
 
 /* Date Picker */
