--- a/index.css
+++ b/index.css
@@ -59,3 +59,21 @@
     margin-top: 15px;
     text-align: center;
 }
+
+/* For alert box */
+.custom-alert {
+    display: none;
+    position: fixed;
+    top: 610px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #8b1717;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.custom-alert.show {
+    display: block;
+}
