Update Profile modal
fix bug for overlapping of name when the name is too long

--- a/userHomePage.css
+++ b/userHomePage.css
@@ -35,7 +35,7 @@
 /* --- For Profile Modal --- */
 #profileModal{
   width: 650px;
-  height: 355px;
+  height: 400px;
   border-radius: 25px;
   padding: 15px;
   overflow: hidden;
@@ -43,6 +43,11 @@
 
 #profileModal p{
  font-size: 30px;
+}
+
+#profileModal .modal-content {
+  max-height: 400px; /* Adjust height as needed */
+  overflow-y: auto;
 }
 
 #profileModal h3{
