Update for background colors

--- a/adminHomePage.css
+++ b/adminHomePage.css
@@ -332,3 +332,16 @@ table.highlight tbody tr:hover {
 .btn-flat{
     color:#329958; 
 }
+
+.date-picker.selected{
+    background-color: #cacaca;
+    outline: 1px solid black;
+}
+
+.date-picker.event-marker{
+    background-color: #5fa052;
+}
+
+.event-marker::after {
+    background-color: #5fa052;
+}
